feat: add dosage to systemic therapy model and form
