# pop-web/src/app/shared/openapi/model/systemic-therapy-medication-schema.ts
@@ -7,6 +7,7 @@
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
+import { MeasureSchema } from './measure-schema';
 import { CodedConceptSchema } from './coded-concept-schema';
 
 
@@ -39,5 +40,13 @@ export interface SystemicTherapyMedicationSchema {
     route?: CodedConceptSchema | null;
     usedOfflabel?: boolean | null;
     withinSoc?: boolean | null;
+    dosageMassConcentration?: MeasureSchema | null;
+    dosageMass?: MeasureSchema | null;
+    dosageVolume?: MeasureSchema | null;
+    dosageMassSurface?: MeasureSchema | null;
+    dosageRateMassConcentration?: MeasureSchema | null;
+    dosageRateMass?: MeasureSchema | null;
+    dosageRateVolume?: MeasureSchema | null;
+    dosageRateMassSurface?: MeasureSchema | null;
 }
 
